=======
CHANGES
=======

3.5 (unreleased)
------------------

- Feature: Added support for restricting the available languages. We support
  an environment variable called `zope_i18n_allowed_languages` now, which is
  a list of comma or space separated language codes. If the environment
  variable is set, the ZCML registration will only process those folders
  which are in the allowed languages list.

- Feature: Added optional automatic compilation of mo files from po files.
  You need to depend on the `zope.i18n [compile]` extra and set an environment
  variable called `zope_i18n_compile_mo_files` to any True value to enable
  this option.

- Feature: Re-use existing translation domains when registering new ones.
  This allows multiple packages to register translations in the same domain.
  If the same message exists in multiple catalogs the one registered first
  will take precedence.

- Feature: Recursive translations of message strings with mappings
  (https://bugs.launchpad.net/zope3/+bug/210177), thanks to Hermann
  Himmelbauer for the inital patch.


3.4.0 (2007-10-02)
------------------

- Updated meta-data. No code changes.


3.4.0b5 (2007-08-15)
--------------------

- Bug: Fixed dependency on ``zope.component`` to require it with the 'zcml'
  extra instead of requiring ``zope.security`` directly.


3.4.0b4 (2007-07-19)
--------------------

- Bug: Number parsing was too forgiving, allowing non-numerical and/or
  formatting characters before, after and within the number. The parsing is
  more strict now.


3.4.0b3 (2007-06-28)
--------------------

- Bug: There was a bug in the parser that if no decimal place is given
  you still had to type the decimal symbol. Corrected this problem (one
  character ;-) and provided a test.


3.4.0b2 (2007-06-25)
--------------------

- Feature: Added ability to change the output type when parsing a
  number.


3.4.0b1 (?)
-----------

- Bug: Fixed dependency on ``zope.security`` to require a version that